# Highway-env-adversarial

./: .gitignore  Adv_main.py  Adv_main_IDM.py  Adv_main_all_BV.py  BV_agent.py  EgoAgent_trainer_DQN.py  LICENSE  README.md  config.py  plot.py  setup.cfg
AdvLogs/: plot.py
AdvLogs/A2C-Ego-2lanes-seed1/: events.out.tfevents.1717835719.currychen-B660M-HDV.4108983.0
AdvLogs/A2C-Ego-2lanes-seed2/: events.out.tfevents.1717835719.currychen-B660M-HDV.4108984.0
AdvLogs/A2C-Ego-2lanes-seed3/: events.out.tfevents.1717835719.currychen-B660M-HDV.4108985.0
AdvLogs/A2C-Ego-3lanes-seed1/: events.out.tfevents.1717835731.currychen-B660M-HDV.4109299.0
AdvLogs/A2C-Ego-3lanes-seed2/: events.out.tfevents.1717835731.currychen-B660M-HDV.4109300.0
AdvLogs/A2C-Ego-3lanes-seed3/: events.out.tfevents.1717835731.currychen-B660M-HDV.4109301.0
AdvLogs/DQN-Ego-2lanes-seed1/: events.out.tfevents.1717590959.currychen-B660M-HDV.3056441.0  events.out.tfevents.1717676508.currychen-B660M-HDV.3404934.0  events.out.tfevents.1717829451.currychen-B660M-HDV.3992400.0
AdvLogs/DQN-Ego-2lanes-seed2/: events.out.tfevents.1717590959.currychen-B660M-HDV.3056442.0  events.out.tfevents.1717676508.currychen-B660M-HDV.3404936.0  events.out.tfevents.1717829451.currychen-B660M-HDV.3992401.0
AdvLogs/DQN-Ego-2lanes-seed3/: events.out.tfevents.1717590959.currychen-B660M-HDV.3056443.0  events.out.tfevents.1717676508.currychen-B660M-HDV.3404938.0  (+1 more)
BV_Agent/: Rainbow.py  SAC_agent.py
Ego_Agent/: Trainer.py
highway_env/: __init__.py
highway_env/envs/: __init__.py  (+3 more)
image/: obs
test/: test_one_BV.py
(+168 files in other folders)
